<resources>
    <string name="app_name">HG2Gui</string>
    <string name="location_off">Turn on GPS</string>
    <string name="share_label">Share</string>
    <string name="output_about">Francesco Andreuzzi (Italy)\n\t-> Programmer
        \n\nThanks to Luke Winward for his original idea</string>
    <string name="output_refresh">Refresh: apps, alias, music, contacts, rss feeds</string>
    <string name="output_rate">Thank you!</string>
    <string name="start_notification">T-UI started</string>
    <string name="tui_running">T-UI is running</string>
    <string name="admin_permission">Lock the screen on double tap</string>
    <string name="tui_reset">t-ui reset to default settings</string>
    <string name="copied">Copied:</string>
    <string name="tui_busy">t-ui is busy, use \"ctrlc\" to stop the process</string>
    <string name="donate">Do you like my work? You can offer me a coffee (cmd: $ donate). Thank you!</string>
    <string name="open_file_chooser">Open file with...</string>
    <string name="weather_cant_update">You can\'t perform a manual update with the default key. You have to create a custom key on the website</string>
    <string name="weather_error">The weather API is busy. Trying again at:</string>
    <string name="weather_disabled">Weather is not enabled</string>
    <string name="weather_updated">Weather updated at</string>
    <string name="shortcut_index_greater">The index is greater than the shortcuts count</string>
    <string name="theme_applied">Theme applied:</string>
    <string name="reply_id_not_found">No bound app found with ID:</string>
    <string name="reply_notification_not_found">0 notifications from this app</string>
    <string name="exclude_notification">Exclude notification</string>
    <string name="exclude_app">Exclude app</string>
    <string name="reply_notification">Reply to the last notification</string>
    <string name="notification_service_not_running">The notification service is\'t running</string>
    <string name="invalid_regex">Invalid regex:</string>
    <string name="theme_not_found">Theme not found</string>
    <string name="theme_invalid">Invalid theme</string>
    <string name="theme_old_not_found">You don\'t have an old theme</string>
    <string name="theme_reverted">Reverted to the previous theme</string>
    <string name="theme_unable">Couldn\'t apply this theme</string>
    <string name="output_isdirectory">This is a directory</string>
    <string name="output_filenotfound">File not found</string>
    <string name="notification_reader">T-UI notification reader</string>
    <string name="no_notification_access">Unfortunately t-ui can\'t redirect you to the \"Notification access\" page of your system settings</string>
    <string name="notification_low_api">Notifications are supported on Android 4.3+ only. Use \'config -set show_notifications false\' to disable this message</string>
    <string name="firsthelp_text">First time with t-ui?\n\ttutorial -> view the tutorial on GitHub\n\thelp     -> get a list of available commands</string>
    <string name="permissions_toast">You have to grant Storage permission</string>
    <string name="output_usedefapp">You can use \"apps -default_app\" instead</string>
    <string name="tuinotfound_app">Your apps preferences couldn\'t be loaded because your \"t-ui\" folder is not readable at the moment (you should try to use the command \"restart\")</string>
    <string name="tuinotfound_rss">Your rss preferences couldn\'t be loaded because your \"t-ui\" folder is not readable at the moment (you should try to use the command \"restart\")</string>
    <string name="tuinotfound_notifications">Your notifications preferences couldn\'t be loaded because your \"t-ui\" folder is not readable at the moment (you should try to use the command \"restart\")</string>
    <string name="tuinotfound_xmlprefs">Your xml preferences couldn\'t be loaded because your \"t-ui\" folder is not readable at the moment (you should try to use the command \"restart\")</string>
    <string-array name="hints">
        <item name="hint_twitter">Did you know? t-ui is on Twitter. Have a look (\"$ tui -twitter\")</item>
        <item name="hint_telegram">Did you know? There\'s a Telegram group with many enthusiastic users, where you can discuss, share and chat (\"$ tui -telegram\")</item>
        <item name="hint_googlep">Did you know? Our official Google+ community is full of tips, experimental apks and discussions (\"$ tui -googlep\")</item>
        <item name="hint_tutorial">Did you read the tutorial? (\"$ tutorial\")</item>
        <item name="hint_theme">Did you know that you can easily switch your theme? Have a look at the cmd \"$ theme\"</item>
        <item name="hint_theme2">Did you know? You can create your custom theme and share it with other users. Have a look at the cmd \"$ theme -create\"</item>
        <item name="hint_help">Doubts about a command? Use \"$ help cmdName\"</item>
        <item name="hint_music">Did you know? You can listen to music using t-ui. Have a look at the cmd \"$ music\"</item>
        <item name="hint_appgroups">Did you know? t-ui 6.4 introduced App Groups.\nYou can get more details with the cmd \"$ apps -tutorial\"</item>
        <item name="hint_notifications">Did you know? You can see your notifications inside t-ui. If you\'re interested, have a look at the tutorial: \"$ notifications -tutorial\"</item>
        <item name="hint_clear">Are you sick of clearing your screen? Have a look at the options \"clear_after_cmds\", \"clear_after_seconds\" and \"maxlines\"</item>
        <item name="hint_wallpaper">Do you want to use your wallpaper as t-ui background? Use the cmd: \"$ config -set system_wallpaper true\"</item>
        <item name="hint_config">Doubts about any config option? Use the cmd \"$ config -info [option]\"table</item>
        <item name="hint_alias">Did you know that t-ui supports aliases? For more info, use the cmd \"$ alias -tutorial\"</item>
        <item name="hint_excludenotification">Did you know? You can exclude an unwanted notification by long-clicking on it</item>
        <item name="hint_disable">You can disable this messages with the cmd \"$ config -set show_hints false\"</item>
    </string-array>
    <string-array name="tutorial">
        <item>Use the command \"help\" to get a list of available commands</item>
        <item>If you want to get info about the behavior of a command, type \"help cmdName\"</item>
        <item>Launch your apps typing their name</item>
        <item>You can call your contacts with the cmd \"call contactName\"</item>
        <item>t-ui is highly customizable. Check \"config -ls\" or use the cmd \"config -tutorial\" to see what you can change</item>
        <item>You can choose within a large database of themes uploaded by t-ui users. Check the cmd \"theme -view\"</item>
        <item>Join our community! Google+, Twitter, Telegram and GitHub. Use the cmd \"tui\"</item>
    </string-array>
    <string name="output_appnotfound">Application not found</string>
    <string name="activity_not_found">Activity not found</string>
    <string name="app_installed">App installed:</string>
    <string name="app_uninstalled">App uninstalled:</string>
    <string name="app_shortcut_not_found">Shortcut not found</string>
    <string name="calling">Calling:</string>
    <string name="restarting">t-ui will be closed in some seconds. Click the home button to restart it</string>
    <string name="output_nopermissions">You didn\'t grant the permission</string>
    <string name="output_waitingpermission">Waiting permission</string>
    <string name="output_problemcamera">There was a problem while connecting to your device camera</string>
    <string name="output_invalidarg">Invalid argument</string>
    <string name="output_lessarg">Less arguments than expected</string>
    <string name="invalid_integer">Invalid integer</string>
    <string name="output_nothing_found">Not found</string>
    <string name="output_xmlproblem1">There was an XML problem with your file</string>
    <string name="output_xmlproblem2">, t-ui will use default values.\nFix or delete the file to recover your options</string>
    <string name="output_errorlabel">Error:</string>
    <string name="output_invalidcolor">Invalid color</string>
    <string name="output_groupnotfound">Group not found</string>
    <string name="output_groupexists">This group already exists</string>
    <string name="output_groupspace">Spaces are not allowed inside group names</string>
    <string name="output_notification_error">The notification service couldn\'t be started:</string>
    <string name="reply_app_not_found">Couldn\'t find bound app:</string>
    <string name="no_internet">No internet access</string>
    <string name="invalid_number">Invalid number</string>
    <string name="output_error">An unknown error occurred</string>
    <string name="internet_error">Internet error. Response code:</string>
    <string name="no_result">No results</string>
    <string name="unavailable_name">Name unavailable</string>
    <string name="invalid_name">Invalid name</string>
    <string name="api_low">Low Android version</string>
    <string name="invalid_datastoretype">Invalid type</string>
    <string name="location_error">Couldn\'t get your location</string>
    <string name="note_not_found">Note not found</string>
    <string name="row_used">This row is busy</string>
    <string name="note_max_reached">Your notes reached the value set in notes_max_lines. You can scroll to see them all, change the value, or disable this message (ui.xml: show_scroll_notes_message).</string>
    <string name="id_already">Busy ID</string>
    <string name="id_notfound">Invalid ID</string>
    <string name="rss_not_found">Invalid ID: no RSS feed found</string>
    <string name="rss_never_checked">This RSS feed hasn\'t been checked yet</string>
    <string name="rss_invalid_timeformat">The time format couldn\'t be parsed</string>
    <string name="rss_invalid_date">Invalid publication date tag:</string>
    <string name="rss_invalid_entry_tag">Invalid entry tag:</string>
    <string name="rss_invalid_empty">Invalid RSS: the file is empty:</string>
    <string name="output_aliasnotfound">Alias not found:</string>
    <string name="output_problemaddingalias">There was a problem with your alias</string>
    <string name="output_notaddingalias1">The name of your alias:</string>
    <string name="output_notaddingalias2">is equal to its value. This may lead to bad behaviors, so it has been excluded. You should edit the name to use it</string>
    <string name="snake_exit">EXIT</string>
    <string name="snake_system_ready">SYSTEM_READY</string>
    <string name="snake_menu_linked">MENU_LINKED</string>
    <string name="snake_navigate">NAVIGATE</string>
    <string name="snake_data_logs">DATA_LOGS</string>
    <string name="snake_comms_uplink">COMMS_UPLINK</string>
    <string name="snake_sys_config">SYS_CONFIG</string>
    <string name="snake_reinitiate">RE-INITIATE</string>
    <string name="guide_satellite">SATELLITE</string>
    <string name="guide_earth"> • EARTH 42°N</string>
    <string name="guide_battery">BAT: 98%</string>
    <string name="guide_dont_panic">DON\'T\nPANIC</string>
    <string name="guide_encyclopedia">ENCYCLOPEDIA GALACTICA</string>
    <string name="guide_title">The Command Line</string>
    <string name="guide_body_1">A primitive yet effective method of conversing with silicon.\n\nImagine a conversation where you must be incredibly precise, or the other party simply stares blankly.\n\nThat is the Command Line. It is the art of typing \'sudo\' and feeling like a wizard.</string>
    <string name="guide_warning_label">WARNING:</string>
    <string name="guide_warning_text">Mostly harmless, unless you delete the wrong directory.</string>
    <string name="guide_prompt_icon">&gt;</string>
    <string name="guide_prompt_hint">QUERY GUIDE...</string>
</resources>